# libpurple-meta

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  meson.build
.cache/clangd/index/: instagram.c.75EB94597B403217.idx  instagram.h.B25173CC1BBE10A0.idx  messenger.c.B3B21B217768F2FD.idx  messenger.h.6AC5221279531122.idx  meta-auth.c.E77A14922D7368D6.idx  meta-auth.h.378F68AC9E406490.idx  meta-config.c.A95FAFF3B989D1C2.idx  meta-config.h.7402653C4DC06FE5.idx  meta-security.c.0416FD0109EC2474.idx  meta-security.h.C2DA6157DFAC7FAA.idx  meta-websocket.c.D4E8A7F8400BE097.idx  meta-websocket.h.2244F898C569B4A4.idx  prpl-meta.c.3DF8BAEE9845C7FA.idx  prpl-meta.h.19C606337B73337B.idx
config/: meta-config.json
docs/: CONFIGURATION.md  META_APP_SETUP.md  QUICKSTART.md  SECURITY.md
src/: prpl-meta.c  prpl-meta.h
src/common/: meta-auth.c  meta-auth.h  meta-config.c  meta-config.h  meta-http.c  meta-http.h  meta-security.c  meta-security.h  meta-websocket.c  meta-websocket.h  purple-compat.h
src/instagram/: instagram.c  instagram.h
src/messenger/: messenger.c  messenger.h
